Changes for 3.4.10rc1

New features:

Bug fixes:
..F....... [ZBX-12644] fixed filter being partially reset when using pagination in availability report page (Ivo)
..F....... [ZBX-12882] fixed in popup window being allowed to select applications from different hosts when editing item mass update form (agriscenko)
.......PS. [ZBX-13788] fixed host availability stuck in unknown state after proxy changes (wiper)

--------------------------------------------------------------------------------
Changes for 3.4.9

3.4.9rc3 was released as 3.4.9 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.9rc3

Bug fixes:
........S. [ZBX-14313] fixed trigger level correlation when multiple tags are set (wiper)

--------------------------------------------------------------------------------
Changes for 3.4.9rc2

Bug fixes:
...G...... [ZBX-13781] fixed possible crash in the function "web.page.get" of Zabbix Agentd (MVekslers)

--------------------------------------------------------------------------------
Changes for 3.4.9rc1

Bug fixes:
..F....... [ZBX-14337] fixed persistent xss in map navigation tree widget (vjaceslavs)
..F....... [ZBX-14336] fixed persistent xss vulnerability in services (vjaceslavs)
..F....... [ZBX-12821] fixed multiple javascript memory leaks (miks)
........S. [ZBX-13755] fixed proxy lastaccess update on 32-bit Zabbix server (vso)
..F....... [ZBX-12425] fixed selection of web items in the "Plain text" screen element (Sasha)
...G...... [ZBX-13781] fixed CRLF injection in Zabbix Agentd (MVekslers)
........S. [ZBX-13766] fixed comparison of two large float numbers in expressions (Sergejs)
.......PS. [ZBX-13481] fixed incorrect parsing of BITS data type in SNMP response (vso)
.......PS. [ZBX-13744] fixed potential shared memory leak when item is removed (Sergejs)
A.F....... [ZBX-13742] fixed parsing of the operator "not" in trigger expression (Sasha)